# Ohanna-Agent

./: .gitignore  Architecture-Logicielle.md  CHANGELOG.md  Capacites.md  Commandes.md  Concepts.md  Configuration.md  Etats.md  MANIFEST.in  MQTT-Convention.md  MQTT.md  Message-Model.md  Philosophie.md  Plugins.md  README.md  ROADMAP.md  Vision.md  application.py  avant-migration-grille.patch  bootstrap.py  main.py  ohanna-agent-topology-pixels-to-grid.patch  production_agent.py  pyproject.toml  requirements.txt
administration/: __init__.py  dhcp.py  infrastructure.py  models.py  server.py
builder/: __init__.py  dns_configuration_builder.py  infrastructure_builder.py
config/: infrastructure.example.yaml  infrastructure.yaml  shikamaru.development.yaml  shikamaru.example.yaml  shikamaru.yaml
config/plugins/: dns.example.yaml  dns.yaml
configuration/: __init__.py  administration.py  agent.py  base.py  configuration.py  dns.py  enums.py  health.py  infrastructure.py  infrastructure_validator.py  loader.py  logging.py  mqtt.py  plugins.py  vision.py
core/: __init__.py  application_events.py  command.py  command_events.py  dispatcher.py  event.py  event_bus.py  event_subscription.py  events.py  executor.py  lifecycle.py  plugins.py  registry.py  runtime.py  scheduler.py  services.py  statistics.py
core/capability/: __init__.py  base.py  capability.py  capability_health.py  capability_manager.py  capability_state.py  exceptions.py
core/mqtt/: __init__.py  client.py  heartbeat.py  messages.py  publisher.py  reconnect.py  subscriber.py  transport.py
deployment/: install.sh  update.sh
deployment/systemd/: install.sh  ohana-agent.service  ohanna-agent.service  update.sh
docs/: Administration.md
docs/Architecture/: Core.md  MQTT.md
docs/Deployment/: Linux-Filesystem.md
docs/Releases/: v1.0.0.md
docs/adr/: ADR-0000 - Vision-d-Architecture.md  ADR-0001 - Lifecycle.md  ADR-0002 - Application.md  ADR-0003 - Composition.md  ADR-0004 - State transitions.md  ADR-0005 - Configuration-Model.md  ADR-0008 - Event Bus.md  (+24 more)
health/: heartbeat.py  monitor.py  watchdog.py
infrastructure/: __init__.py  endpoint.py  enums.py  infrastructure.py  infrastructure_capability_calculator.py  infrastructure_health_manager.py  infrastructure_health_update.py  node.py  observation.py  observation_manager.py  scheduler_observation_handler.py  service.py
loader/: __init__.py  dns_config_loader.py  infrastructure_loader.py
memory/: __init__.py  memory_entry.py  memory_manager.py  memory_scope.py  memory_serializer.py  memory_statistics.py  memory_storage.py  persistent_memory.py  runtime_memory.py  session_memory.py
observer/: __init__.py  event_publisher.py  infrastructure_observation_mapper.py  observation.py  observation_definition.py  observation_engine.py  observation_event_publisher.py  observation_export_handler.py  observation_export_pipeline.py  observation_exporter.py  observation_factory.py  observation_runtime.py  observation_serializer.py  observation_state.py  observation_status.py  observation_status_mapper.py  observer.py  observer_result.py  observer_result_mapper.py  observer_runtime.py  observer_state.py  observer_statistics.py  plugin_observation_dispatcher.py  plugin_observation_executor.py
plugin/: __init__.py  plugin.py  plugin_command.py  plugin_context.py  plugin_descriptor.py  plugin_discovery.py  plugin_errors.py  plugin_events.py  plugin_loader.py  plugin_manager.py  plugin_manifest.py  plugin_registry.py  plugin_runtime.py  plugin_state.py
plugins/: __init__.py
recovery/: __init__.py  action.py  engine.py  policy.py  result.py  strategy.py
scheduler/: __init__.py  base_trigger.py  clock.py  cron_trigger.py  dispatcher_task_executor.py  interval_trigger.py  oneshot_trigger.py  scheduler.py  scheduler_events.py  scheduler_runtime.py  scheduler_state.py  scheduler_statistics.py  task.py  task_executor.py  task_registry.py  trigger.py
scripts/: build_release.py  demo_dns_pipeline.py  prepare_release.py  show_infrastructure_status.py  test_clean_install.py  test_dns_observer.py
tests/: test_action.py  test_administration_dhcp.py  test_administration_server.py  test_application.py  test_base_check.py  test_capability.py  test_capability_base.py  test_capability_manager.py  test_cli_entrypoint.py  test_clock.py  test_command.py  test_configuration.py  test_configuration_examples.py  test_core_executor.py  test_core_registry.py  test_core_runtime.py  test_core_statistics.py  test_cron_trigger.py  test_dependency_graph.py  test_deployment_scripts.py  test_dispatcher.py  test_dispatcher_task_executor.py  test_distribution_content.py  test_dns_capability_runtime.py  test_dns_check.py  test_dns_config.py  test_dns_config_loader.py  test_dns_configuration_builder.py  test_dns_plugin.py  test_dns_plugin_config.py  test_dns_plugin_initial_state_is_created.py  test_dns_resolver.py  test_dns_runtime.py  test_dns_server.py  test_dns_server_runtime.py  test_dns_statistics.py  test_dns_vision_integration.py  test_dns_yaml_config.py  test_endpoint.py  test_endpoint_runtime.py  (+108 more)
(+40 files in other folders)
