[build-system]
requires = [
    "setuptools>=77",
    "wheel",
]
build-backend = "setuptools.build_meta"


[project]
name = "ohana-agent"
version = "1.1.1"
description = "Infrastructure observation agent for the Ohana platform."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = [
    "LICENSE",
]
authors = [
    { name = "Cédric Harnois" },
]
keywords = [
    "infrastructure",
    "monitoring",
    "observability",
    "home-automation",
    "ohana",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
dependencies = [
    "PyYAML>=6.0",
    "pydantic>=2,<3",
    "dnspython>=2.7,<3",
]


[project.urls]
Homepage = "https://github.com/cedric-HAOS/Ohana-Agent"
Repository = "https://github.com/cedric-HAOS/Ohana-Agent"
Issues = "https://github.com/cedric-HAOS/Ohana-Agent/issues"


[project.scripts]
ohana-agent = "main:main"


[project.optional-dependencies]
development = [
    "build",
    "pytest",
    "ruff",
]


[tool.setuptools]
py-modules = [
    "application",
    "bootstrap",
    "main",
    "production_agent",
]


[tool.setuptools.packages.find]
where = ["."]
include = [
    "builder*",
    "configuration*",
    "core*",
    "health*",
    "infrastructure*",
    "loader*",
    "memory*",
    "mqtt*",
    "observer*",
    "plugin*",
    "plugins*",
    "recovery*",
    "scheduler*",
]
exclude = [
    "tests*",
    "scripts*",
]


[tool.ruff]
line-length = 88
target-version = "py313"


[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = []


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_functions = [
    "test_*",
]
